// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/searchabledropdownwithaddall > should create a dropdown with an add all and remove all buttons 1`] = `
<div
  className="ms-Stack css-109"
>
  <div
    className="ms-Dropdown-container msla-searchable-dropdown-with-buttons"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      className="ms-Dropdown dropdown-110"
      data-is-focusable={true}
      data-ktp-target={true}
      id="Dropdown0"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={0}
    >
      <span
        aria-invalid={false}
        className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-111"
        id="Dropdown0-option"
      >
        Select an option
      </span>
      <span
        className="ms-Dropdown-caretDownWrapper caretDownWrapper-112"
      >
        <i
          aria-hidden={true}
          className="ms-Dropdown-caretDown caretDown-130"
          data-icon-name="ChevronDown"
        >
          
        </i>
      </span>
    </div>
  </div>
  <div
    className="ms-TooltipHost root-131"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="none"
  >
    <button
      aria-disabled={false}
      className="ms-Link msla-dropdown-control-button root-132"
      data-automation-id="msla-add-all-button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Add all
    </button>
    <div
      hidden={true}
      id="tooltip1"
      style={
        {
          "border": 0,
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      Add all tooltip
    </div>
  </div>
  <div
    className="ms-TooltipHost root-131"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="none"
  >
    <button
      aria-disabled={false}
      className="ms-Link msla-dropdown-control-button root-132"
      data-automation-id="msla-remove-all-button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Remove all
    </button>
    <div
      hidden={true}
      id="tooltip2"
      style={
        {
          "border": 0,
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      Remove all tooltip
    </div>
  </div>
</div>
`;

exports[`lib/searchabledropdownwithaddall > should create a dropdown with an add all only 1`] = `
<div
  className="ms-Stack css-109"
>
  <div
    className="ms-Dropdown-container msla-searchable-dropdown-with-buttons"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      className="ms-Dropdown dropdown-110"
      data-is-focusable={true}
      data-ktp-target={true}
      id="Dropdown3"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      role="combobox"
      tabIndex={0}
    >
      <span
        aria-invalid={false}
        className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-111"
        id="Dropdown3-option"
      >
        Select an option
      </span>
      <span
        className="ms-Dropdown-caretDownWrapper caretDownWrapper-112"
      >
        <i
          aria-hidden={true}
          className="ms-Dropdown-caretDown caretDown-130"
          data-icon-name="ChevronDown"
        >
          
        </i>
      </span>
    </div>
  </div>
  <div
    className="ms-TooltipHost root-131"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="none"
  >
    <button
      aria-disabled={false}
      className="ms-Link msla-dropdown-control-button root-132"
      data-automation-id="msla-add-all-button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Add all
    </button>
    <div
      hidden={true}
      id="tooltip4"
      style={
        {
          "border": 0,
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      Add all tooltip
    </div>
  </div>
</div>
`;
